Test/git-issues/git-issue-864.dfy.expect
git-issue-864.dfy(13,8): Error: module M2 redeclares a name T1 from module M1 without specifying refinement (...)
git-issue-864.dfy(14,19): Error: unresolved identifier: b
2 resolution/type errors detected in git-issue-864.dfy
